--- a/src/components/postsBody/postsBody.css
+++ b/src/components/postsBody/postsBody.css
@@ -16,22 +16,24 @@
 
 .post { /* Styles shape of .post and uses flex-column for vertical alignment of items */
    width: 80%;
-   margin: 1rem auto;
+   margin: 1.5rem auto; /* Horizontally centers and spaces 1.5rem between posts*/
 
+
+   /* Shadows styling  around each post */
    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, 
-               rgba(17, 17, 26, 0.1) 0px 8px 24px, 
-               rgba(17, 17, 26, 0.1) 0px 16px 48px;
+               rgba(17, 17, 26, 0.3) 0px 8px 24px, 
+               rgba(17, 17, 26, 0.2) 0px 16px 48px; 
 
    display: flex;
    flex-direction: column;
     
    height: auto;
-   border-radius: 0.5rem;
+   border-radius: 2rem;
 }
 
 .post h2 {
     width: 80%;
-    margin: 1rem auto;
+    margin: 1rem auto 0 auto;
     border-bottom: 2px solid rgba(172, 172, 172, 0.692); 
 }
 
@@ -45,6 +47,23 @@
     height: auto;
 }
 
+.body-text {
+    margin: 1rem auto 0 auto;
+    padding-bottom: 1rem;
+    width: 80%;
+    border-bottom: 2px solid 
+                 rgba(172, 172, 172, 0.692);
+
+    white-space: pre-wrap;     /* Respect line breaks and whitespace */
+    word-wrap: break-word;     /* Break long words if needed */
+    overflow-wrap: anywhere;   /* Modern catch-all for long strings */
+}
+
+.body-text p { /*Removes default margins of <p> inside <ReactMarkdown>*/
+    margin:0
+}
+
 .up-votes {
     margin-left: 1.5rem;
+    margin: 1rem auto 1rem auto;
 }
