--- a/src/components/postsBody/mediaHolder/mediaHolder.css
+++ b/src/components/postsBody/mediaHolder/mediaHolder.css
@@ -1,70 +1,103 @@
+/***************************************************************************************************/
+/***************************************************************************************************/
+/******************** GENERAL STYLING for the video and image(s) containers! ***********************/
+/***************************************************************************************************/
+/***************************************************************************************************/
+
 .video-container, .image-container, .images-container { /* Style the video/image(s) containers */
 
-  width: 80%;   /* Fits, with some white space, in parent post container */
+  width: 100%;   /* Fits, with some white space, in parent post element */
   height: auto;
 
   display: flex;  /* Centers video/image(s) inside container horizontally */
   justify-content: center;
 
   margin: 1rem auto 0 auto; /* Horizontally centers THIS container itself. */
-
 }
 
-.video-container {
+/***************************************************************************************************/
+/***************************************************************************************************/
+/******************** STYLING for the video  containers! *******************************************/
+/***************************************************************************************************/
+/***************************************************************************************************/
+
+.video-container { /* Background color container around video */
   background-color: #161616af; /* Adds background color for space around video */
   border: 1px solid rgba(15, 15, 15, 0.596);
-  border-radius: 1rem;
+  border-radius: 0.5rem;
 
-  max-height: 500px; /* Max height constraint */
+  max-height: 500px; /* Max height constraint (prevent videos from being over 500px tall when displayed) */
   align-items: center;
   overflow: hidden; /* Clip overflow if needed */
 }
 
-.post-vid  { /* Centers and contains video inside parent */
-  max-height: 100%;
-  max-width: 100%; 
-  object-fit: contain;
-  border-radius: 1rem; 
+.post-vid { /* Centers and contains video inside parent .video-container */
+
+  width: 100%;           /* fill container width */
+  height: auto;          /* maintain aspect ratio */
+  max-height: 500px;     /* cap at 500px */
+  object-fit: contain;   /* contains object in parent container */
+  border-radius: 0.5rem; 
+  /*display: block; /**/
 }
 
-.images-container { /* styling if container holds multiple images in slideshow form*/
+/***************************************************************************************************/
+/***************************************************************************************************/
+/************ STYLING for the image containers (for both multiple and single image) ****************/
+/***************************************************************************************************/
+/***************************************************************************************************/
+
+/* STYLING if container holds multiple images in carousel form*/
+.images-container { 
   position: relative; /* Enables absolute position in child components. 
                          VERY IMPORTANT for indicator orbs and left/right buttons. */
 
-  background-color: #91919179; /* Adds background styling for carousel*/
-  border: 1px solid rgba(110, 110, 110, 0.596);
+  background-color: #9c9c9c86; /* Adds background color styling for carousel*/
+  border: 1px solid rgba(122, 122, 122, 0.445);
   border-radius: 1rem;
-
-  /*align-items: center; /* ensures vertical alignment */
 } 
 
- /* Takes full width if there's only 1 image */
-.image-container img { 
-  width: 100%;
-  /*object-fit: contain;
-  /*display: block;
-  /*margin: 0 auto;
-  width: auto;
-  height: auto; 
+.images-container img { /* Ensure that nested <img> will scale to parent .images-container */
+  /*max-height: 100%;
   max-width: 100%; */
-  /*max-height: 500px; /* Prevent super tall images */
+  height: 100%; 
+  max-width: 100%; 
+  overflow: hidden;
+  object-fit: contain;
 }
 
-/* Takes 90% width if multiple images slideshow */
-.images-container img { width: 90%; }
+/* STYLING if container holds 1 image*/
+.image-container { 
+  width: 100%;
+/*  max-height: 500px; /**/
+  background-color: #2e2626af; /* Adds contrasting background color around single iamge*/
+  border: 1px solid rgba(110, 110, 110, 0.445);
+  border-radius: 0.5rem;
 
-.post-image  { /* Centers and contains actual post image (including carousel images) */
-  max-height: 100%;
+  object-fit: contain;
+  overflow: hidden; /* hide spillover if needed */
+} 
+
+.image-container img {
+  height: 100%; 
+  max-width: 100%; 
+}
+
+/* Centers and contains actual post image in all image containers */
+.post-image  { 
+
+  max-height: 500px;
   max-width: 100%; 
   object-fit: contain;
 
   display: block;       /* avoid inline gaps */
-  margin: 0 auto;       /* horizontally center safely*/
-  /*width: auto; /**/
+  margin: auto auto;       /* horizontally centers img*/
 }
 
 
-.fade { /*Add 'fade' effect when switching image */
+/***** Styling for prev/next buttons for images carousel *****/
+
+.fade { /*Add 'fade' effect when switching images in carousel */
     animation-name: fade;
     animation-duration: 1.5s;
 }
@@ -74,8 +107,8 @@
 }
 
 
-/***** Styling for prev/next buttons for image slideshows *****/
-.prev, .next {
+.prev, .next { /* GENERAL styling for both prev/next buttons */
+
   cursor: pointer;    /* 'pointer' to click on arrow */
   position: absolute; /* enables buttons to 'float' on image edges */
 
@@ -90,7 +123,7 @@
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Left and Right sides */
+/* SPECIFIC styling for both prev/next buttons */
 .prev {
   border-radius: 0px 7px 7px 0px; 
   left: 0px; 
@@ -100,20 +133,17 @@
   right: 0px;
 } 
 
-/* Style for hovering on prev/next buttons */
-.prev:hover, .next:hover {
+.prev:hover, .next:hover { /* Styling for hovering on prev/next buttons */
     background-color: rgba(0,0,0,0.8);
     transition: background-color 0.3s ease;
 }
 
-.orbs { /* contains indicator orbs*/
-
+/* STYLING for container of indicator orbs*/
+.orbs { 
     position: absolute; /* Used to help move 'orbs' to bottom edge of image */
     bottom: 10px;       /* margin from image bottom*/
     
     display: flex; /* used to vertically center orbs in orbs container */
-    /*justify-content: center;
-    align-items: center; */
 
     left: 50%;                      /* center from left */
     transform: translateX(-50%);    /* shift back half width for perfect center */
@@ -124,7 +154,7 @@
     z-index: 3;
 }
 
-/* General styling for orb indicators */
+/* ALL STYLING for the orb indicators themselves */
 .orb, .orb-active {
     cursor: pointer; /* Highlight click on orb to switch images */
 
