--- a/src/components/postsBody/postsBody.css
+++ b/src/components/postsBody/postsBody.css
@@ -15,7 +15,7 @@
 }
 
 .post-wrapper { /* Styles shape of .post and uses flex-column for vertical alignment of items */
-    width: 75%;
+    width: 68%;
     margin: 1.5rem auto; /* Horizontally centers and spaces 1.5rem between posts*/
 
     /* Shadows styling  around each post */
@@ -35,6 +35,52 @@
     margin: 1rem auto;
 }
 
+/********* Header info on Post ***********/
+
+.post-info, .user-info {
+    display: flex;
+    flex-direction: row;
+}
+
+.user-info {
+    gap: 5px;
+}
+
+.avatar-icon {
+    width: 2rem;
+    height: 2rem;
+    border: 1px solid rgba(0, 0, 0, 0.603);
+    border-radius: 50%;
+    overflow: hidden;
+    position: relative;
+    /*
+    justify-content: center;
+    align-items: center;*/
+}
+
+.avatar-icon img {
+    width: 100%;
+    height: 100%; /*auto;/**/
+    object-fit: cover;
+    transform: scale(1.5);
+    transform-origin: center;
+}
+
+.author-name {
+    font-weight: bold;
+    font-size: large;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #0d54a0; /*rgb(86, 124, 207);/**/
+/*    justify-self: center; */
+    align-self: center; /*vertically center text*/
+}
+
+.created-time {
+    margin-left: 1.2rem;
+    align-self: center;
+}
+
+/*****************************************/
 
 .post h2 {
     width: 100%;
@@ -54,10 +100,10 @@
 
 .gallery-unavailable {
     width: 100%;
-    font-size: 1rem;
+    font-size: 3rem;
+    padding: 2rem 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
-    border-radius: 0.5rem;
     background-color: grey;
     margin: 1rem auto;
 }
