--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,4 +2,6 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+
+    /*padding-left: 280px;  /* ✅ Offset to make space for the fixed sidebar */
 }
